--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,33 @@
+# jpa
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+spring.jpa.properties.hibernate.format_sql=true
+cBinder=TRACE
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
 
+# Mysql
+spring.datasource.url=${MYSQL_URL:jdbc:mysql://localhost:3306/transacaoDB}             
+spring.datasource.username=${MYSQL_USER:root}
+spring.datasource.password=${MYSQL_PASSWORD:bancoroot}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Kafka
+# Endereco do Kafka
+spring.kafka.bootstrap-servers=${KAFKA_HOST:localhost:9092}
+
+# Propriedades do nosso consumidor
+# Formato da chave (String) recebida!
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+# Formato da mensagem \ evento (JSON) recebida(o)!
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+
+# Identificador do grupo de consumo
+spring.kafka.consumer.group-id=${KAFKA_CONSUMER_GROUP_ID:minha-aplicacao}
+
+# Modelo de coleta do consumidor (latest, earliest, none)
+spring.kafka.consumer.auto-offset-reset=${KAFKA_AUTO-OFFSET-RESET:latest}
+
+# Topico
+spring.kafka.topic.transactions=transacoes
